--- a/lib/views/user_interface.erb
+++ b/lib/views/user_interface.erb
@@ -14,7 +14,7 @@ Your´re logged in
 		<input type="submit" value="Post">
 	</form>
 </div>
-<form method="post" action="/sessions">
+<form action="/logout" method="post">
 		<input type="hidden" name="_method" value="delete">
 		<input type="submit" value="Sign out">
 </form>
