new posts are displayed at the start of the page

--- a/lib/views/user_interface.erb
+++ b/lib/views/user_interface.erb
@@ -12,7 +12,7 @@
 <ul>	
 	<% begin %>
 	<% @posts.each do |post| %>
-	<li><%= post.message %><br>at:<%= post.time %> by:<%= post.nickname %></li>
+	<li><%= post.message %><br>at:<%= post.time.strftime("%H:%M") %> by:<%= post.nickname %></li>
 	<% end %>
 	<% rescue %>
 	something went wrong
