--- a/lib/views/user_interface.erb
+++ b/lib/views/user_interface.erb
@@ -12,7 +12,7 @@
 <ul>	
 	<% begin %>
 	<% @posts.each do |post| %>
-	<li><%= post.message %><br>at:<%= post.time.strftime("%H:%M:%S - %A") %> by:<%= post.nickname %></li>
+	<br><li><%= post.message %><br>at:<%= post.time.strftime("%H:%M:%S - %A") %>by:<%= post.nickname %></li>
 	<% end %>
 	<% rescue %>
 	something went wrong
