added tons of scenarios in cucumber

--- a/lib/views/user_interface.erb
+++ b/lib/views/user_interface.erb
@@ -1,3 +1,5 @@
+<div id="welcome">Welcome <%= session[:name] %> !</div>
+
 <div id="new-post">
 	<form action="/" method="post">
 		<textarea cols="50" rows="4" name="message" maxlength="140"></textarea>
