added cartman and a little css

--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -9,6 +9,9 @@
     	<link href="stylesheet.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+    <div id="logo">
+    <img src="chitterlogo.png">
+    </div>
     <h1>Chitter - Your personal shitty Twitter substitute</h1>
    <%= yield %>
     </body>
