--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -9,10 +9,10 @@
     	<link href="stylesheet.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-    <div id="logo">
+    <div id="header">
     <img src="chitterlogo.png">
-    </div>
     <h1>Chitter - Your personal shitty Twitter substitute</h1>
-   <%= yield %>
+    </div>
+    <%= yield %>
     </body>
 </html>
