--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -19,6 +19,26 @@ body .index-header {
 	text-align: center;
 }
 
+body .cheets-heading {
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 22px;
+	color: #66757f;
+	font-weight: 300;
+	line-height: 22px;
+	border: 1px solid #e6e6e6;
+	background-color: white;
+	height: 50px;
+	width: 590px;
+	min-height: 20px;
+	padding: 12px;
+	background-color: #fff;
+	border-bottom: 1px solid #e1e8ed;
+	border-radius: 5px 5px 0 0;
+	text-align: left;
+	margin: auto;
+
+}
+
 .feed {
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	border: 1px solid #e6e6e6;
@@ -29,7 +49,7 @@ body .index-header {
 	width: 590px;
 }
 
-ul :hover {
+ul .feed:hover {
 	background-color: #f5f8fa;
 }
 
