--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -115,27 +115,7 @@ body .index-header .login .login-button input{
 	border-radius: 4px;
 }
 
-body .index-header .login .login-button:hover{
-	background-color: #44acee;
+body .index-header .login span .login-button:hover{
+	background-color: #fff;
 }
 
-body .index-header .login form .login-email input {
-	border-radius: 4px;
-	height: 30px;
-	width: 273px;
-	box-shadow: inset 0 1px 0 #eee,#fff 0 1px 0;
-	font-size: 13px;
-	color: #8899a6;
-	margin: 5px;
-
-}
-
-body .index-header .login form .password input {
-	border-radius: 4px;
-	width: 150px;
-	height: 30px;
-	box-shadow: inset 0 1px 0 #eee,#fff 0 1px 0;
-	margin: 5px;
-}
-
-body .index-header .login .login .login
