formatted html again, readable now

--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -31,8 +31,9 @@
 				<tr>
 			</table>
 		</form>
-		</div>
 	</div>
+</div>
+
 <ul>
 <div class="cheets-heading">Cheets</div>
 
@@ -44,7 +45,8 @@
 			<div class="name">@<%= post.name %></div> <span class="dot">·</span>
 			<div class="time"><%= post.time.strftime("%A %H:%M") %></div>
 		</div>
-		<div class="feed-message"><%= post.message %></div>	
-	</div>
+		<div class="feed-message"><%= post.message %>
+	</div>	
+</div>
 	<% end %>
 </ul>
