--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -1,35 +1,20 @@
 <div class="index-header">
 	<div class="login">
 		<form method="post" action="/login">
-			<table class="password-signup">
-				<tr>
-					<td><div class="login-email">
-						<input type="text" name='email' placeholder="Email">
-						</div>
-					</td>
-				</tr>
-
-				<tr>
-					<td>
-					<div class="login-password">
-						<input type="password" name='password' placeholder="Password"></div>
-					</td>
-					<td><div class="login-button">
-						<input type="submit" value="Sign in" name="Sign in"></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td>
-					<span class="login-forgotpassword">
-						<a href="/forgotten_password">Forgot your password?</a></span>
-		 			</td>
-		 			<td>
-		 			<span id="signup">
-		 				<a href="/signup/new">Click here to sign up!</a></span>
-					</td>
-				<tr>
-			</table>
+			<div class="password-signup">
+				<p>
+					<input class="login-email" type="text" name='email' placeholder="Email">
+				</p>
+				<p>	
+					<input class="login-password" type="password" value="password" name="password">
+					<input class="signin-btn" type="submit" value="Sign in" name="Sign in">
+				</p>
+				<div class="login-forgotpassword">
+					<a href="/forgotten_password">Forgot your password?</a>
+	 				<span class="dot-form">·</span>
+	 				<span class="signup"><a href="/signup/new">Click here to sign up!</a></span>
+	 			</div>
+ 			</div>
 		</form>
 	</div>
 </div>
