--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -19,19 +19,4 @@
 	</div>
 </div>
 
-<ul>
-<div class="cheets-heading">Cheets</div>
-
-	<% @posts.each do |post| %>
-	<div class="feed">			
-		
-		<div class="feed-header">
-			<div class="nickname"><%= post.nickname %></div>
-			<div class="name">@<%= post.name %></div> <span class="dot">·</span>
-			<div class="time"><%= post.time.strftime("%A %H:%M") %></div>
-		</div>
-		<div class="feed-message"><%= post.message %>
-	</div>	
-</div>
-	<% end %>
-</ul>
+<%= erb :"partials/post_display" %>
