--- a/lib/views/User/user_interface.erb
+++ b/lib/views/User/user_interface.erb
@@ -10,8 +10,4 @@
 		<input type="hidden" name="_method" value="delete">
 		<input type="submit" value="Sign out">
 </form>
-<ul>	
-	<% @posts.each do |post| %>
-	<br><li><%= post.message %><br>at:<%= post.time.strftime("%H:%M:%S - %A") %> by:<%= post.nickname %> aka <%= post.name %></li>
-	<% end %>
-</ul>
+<%= erb :"partials/post_display" %>
