added regex and min length for signup

--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -200,7 +200,7 @@ body .index-header .login {
 	background: transparent;
 	text-decoration: underline;
 	border-spacing: 2px;
-}
+}}
 
 .dot-form {
 	color: #0084b4;
