--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -6,12 +6,12 @@
 					<input class="login-email" type="text" name='email' placeholder="Email">
 				</p>
 				<p>	
-					<input class="login-password" type="password" value="password" name="password">
+					<input class="login-password" type="password" value="password" name="password" placeholder="Password">
 					<input class="signin-btn" type="submit" value="Sign in" name="Sign in">
 				</p>
 				<div class="login-forgotpassword">
 					<a href="/forgotten_password">Forgot your password?</a>
-	 				<span class="dot-form">·</span>
+	 				<span class="dot-form"> · </span>
 	 				<span class="signup"><a href="/signup/new">Click here to sign up!</a></span>
 	 			</div>
  			</div>
