--- a/lib/views/User/new_user.erb
+++ b/lib/views/User/new_user.erb
@@ -1,8 +1,8 @@
 <form action="/signup" method="post">
-	Email: <input name="email" type="text"><br>
-	Name: <input name="name" type="text"><br>
-	Nickname: <input name="nickname" type="text"><br>
-	Password: <input name="password" type="password"><br>
-	Password Confirmation: <input name="password_confirmation" type="password"><br>
+	Email: <input name="email" type="text" required pattern="^([a-zA-Z0-9_\-\.]+)@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,3})$"><br>
+	Name: <input name="name" type="text" required minlength="1"><br>
+	Nickname: <input name="nickname" type="text" required minlength="1"><br>
+	Password: <input name="password" type="password" required minlength="1"><br>
+	Password Confirmation: <input name="password_confirmation" type="password" required minlength="1"><br>
 	<input type="submit" value="Sign up">
 </form>
