--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -111,12 +111,12 @@ body .index-header .login {
 	border-color: gray;
 	border-radius: 4px;
 	margin-right: 6px;
-	padding-bottom: 6px;
-	padding-top: 4px;
+	padding-bottom: 3px;
+	padding-top: 2px;
 	position: absolute;
 	right: 1.8%;
 	height: 30px;
-	top: 44.2%;
+	top: 47.2%;
 	width: 80px;
 }
 
@@ -138,8 +138,10 @@ body .index-header .login {
 	width: 188px;
 	border-radius: 4px;
 	border: 1px solid #ccd6dd;
-	padding: 7px;
+	padding: 5px;
 	margin-left: -88px;
+	padding-left: 9px;
+	padding-bottom: -12px;
 }
 
 .login-email {
@@ -164,7 +166,8 @@ body .index-header .login {
 	text-shadow: 0 1px 0 rgba(255,255,255,0.6);
 	background: transparent;
 	text-decoration: none;
-	margin-bottom: 16px;
+	margin-bottom: 7px;
+	margin-top: -8px;
 }
 
 .login-forgotpassword a:hover {
@@ -200,7 +203,7 @@ body .index-header .login {
 	background: transparent;
 	text-decoration: underline;
 	border-spacing: 2px;
-}}
+}
 
 .dot-form {
 	color: #0084b4;
@@ -212,4 +215,8 @@ body .index-header .login {
 	text-decoration: none;
 }
 
+.login-email, .login-password {
+	font-size: 13px;
+	line-height: 20px;
+}
 
