--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -101,6 +101,7 @@ body .index-header .login {
 	width: 302px;
 }
 
+
 .signin-btn {
 	color: #fff;
 	background-color: #55acee;
@@ -118,16 +119,12 @@ body .index-header .login {
 	height: 30px;
 	top: 47.2%;
 	width: 80px;
+	outline: none;
+	/*-webkit-transition: all 0.30s ease-in-out;
+  	-moz-transition: all 0.30s ease-in-out;
+  	-ms-transition: all 0.30s ease-in-out;
+  	-o-transition: all 0.30s ease-in-out;*/
 }
-
-.signin-btn:active {
-	background: green;
-}
-
-/*body .index-header .login .password-signup tr tbody {
-	height: 30px;
-	width: 276px;
-}*/
 
 .password-signup {
 	position: relative;
@@ -182,7 +179,7 @@ body .index-header .login {
 	text-decoration: underline;
 }
 
-.login .signup a {
+.signup a {
 	color: #0084b4;
 	font-size: 12px;
 	line-height: 13px;
@@ -194,7 +191,7 @@ body .index-header .login {
 
 }
 
-.login .signup a:hover {
+.signup a:hover {
 	color: #0084b4;
 	font-size: 12px;
 	line-height: 13px;
@@ -220,3 +217,34 @@ body .index-header .login {
 	line-height: 20px;
 }
 
+input[type=text]:focus,
+input[type=password]:focus {
+    box-shadow: 0 0 8px #55acee;
+    border-color: #55acee;
+
+}
+
+input[type=text],
+input[type=password]:focus {
+	outline: none;
+	/*-webkit-transition: all 0.30s ease-in-out;
+  	-moz-transition: all 0.30s ease-in-out;
+  	-ms-transition: all 0.30s ease-in-out;
+  	-o-transition: all 0.30s ease-in-out;*/
+}
+
+button:hover {
+	background-color: #55acee;
+	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.15));
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000000, endColorstr=#26000000)";
+	border-color: #3b88c3;
+	cursor: pointer; 
+	cursor: hand;
+}
+
+button:active {
+	background-color: #3b88c3;
+    background-image: linear-gradient(rgba(0,0,0,0.15),rgba(0,0,0,0.15));
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#26000000, endColorstr=#26000000)";
+    border-color: #3b88c3;
+}
