--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -7,12 +7,12 @@
 				</p>
 				<p>	
 					<input class="login-password" type="password" value="password" name="password" placeholder="Password">
-					<input class="signin-btn" type="submit" value="Sign in" name="Sign in">
+					<button class="signin-btn button" type="submit">Sign in</button>
 				</p>
 				<div class="login-forgotpassword">
-					<a href="/forgotten_password">Forgot your password?</a>
-	 				<span class="dot-form"> · </span>
-	 				<span class="signup"><a href="/signup/new">Click here to sign up!</a></span>
+					<span class="signup"><a href="/signup/new">Click here to sign up!</a></span><span class="dot-form"> · </span><a href="/forgotten_password">Forgot your password?</a>
+	 				
+	 				
 	 			</div>
  			</div>
 		</form>
