--- a/lib/views/User/new_user.erb
+++ b/lib/views/User/new_user.erb
@@ -4,5 +4,5 @@
 	Nickname: <input name="nickname" type="text" required minlength="1"><br>
 	Password: <input name="password" type="password" required minlength="1"><br>
 	Password Confirmation: <input name="password_confirmation" type="password" required minlength="1"><br>
-	<input type="submit" value="Sign up">
+	<button class="signin-btn" type="submit">Sign up</button>
 </form>
