--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -10,7 +10,7 @@
 					<button class="signin-btn button" type="submit">Sign in</button>
 				</p>
 				<div class="login-forgotpassword">
-					<span class="signup"><a href="/signup/new">Click here to sign up!</a></span><span class="dot-form"> · </span><a href="/forgotten_password">Forgot your password?</a>
+					<span class="signuplogin"><a href="/signup/new">Click here to sign up!</a></span><span class="dot-form"> · </span><a href="/forgotten_password">Forgot your password?</a>
 	 				
 	 				
 	 			</div>
