--- a/lib/views/User/new_user.erb
+++ b/lib/views/User/new_user.erb
@@ -1,8 +1,8 @@
-<form action="/signup" method="post">
-	Email: <input name="email" type="text" required pattern="^([a-zA-Z0-9_\-\.]+)@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,3})$"><br>
-	Name: <input name="name" type="text" required minlength="1"><br>
-	Nickname: <input name="nickname" type="text" required minlength="1"><br>
-	Password: <input name="password" type="password" required minlength="1"><br>
-	Password Confirmation: <input name="password_confirmation" type="password" required minlength="1"><br>
-	<button class="signin-btn" type="submit">Sign up</button>
+<br><form class="signup" action="/signup" method="post">
+	<input class="signupinput" name="email" type="text" required pattern="^([a-zA-Z0-9_\-\.]+)@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,3})$" placeholder="Email"><br>
+	<input class="signupinput" name="name" type="text" required minlength="1" placeholder="Name"><br>
+	<input class="signupinput" name="nickname" type="text" required minlength="1" placeholder="Nickname"><br>
+	<input class="signupinput" name="password" type="password" required minlength="1" placeholder="Password"><br>
+	<input class="signupinput" name="password_confirmation" type="password" required minlength="1" placeholder="Password Confirmation"><br>
+	<button class="signup-btn button" type="submit">Sign up</button>
 </form>
