--- a/lib/views/User/user_interface.erb
+++ b/lib/views/User/user_interface.erb
@@ -1,8 +1,8 @@
-<div id="welcome">Welcome <%= session[:name] %> !</div>
+Welcome <%= session[:name] %> 
 
 <div id="new-post">
 	<form action="/" method="post">
-		<textarea cols="50" rows="4" name="message" maxlength="140"></textarea>
+		<textarea cols="50" rows="4" name="message" maxlength="140" minlength="25"></textarea>
 		<input type="submit" value="Post">
 	</form>
 </div>
