--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -6,11 +6,11 @@
  		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="HandheldFriendly" content="true">
-    	<link href="stylesheet.css" rel="stylesheet" type="text/css">
+    	<link href="/stylesheet.css" rel="stylesheet" type="text/css">
     </head>
     <body>
     <div id="header">
-    <img src="chitterlogo.png">
+    <img src="/chitterlogo.png">
     </div>
     <%= yield %>
     </body>
