--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -163,6 +163,30 @@ body .signup .signupinput {
 	outline: none;
 	left: 109px;
 }
+
+.resetpasswordform {
+	text-align: center;
+}
+.resetpasswordbutton {
+	color: #fff;
+	background-color: #55acee;
+	border: 1px solid #3b88c3;
+	font-size: 14px;
+	font-weight: bold;
+	border-spacing: 2px;
+	border-color: gray;
+	border-radius: 4px;
+	padding-bottom: 6px;
+	padding-top: 2px;
+	position: relative;
+	right: 1.8%;
+	height: 46px;
+	top: -0.8%;
+	width: 80px;
+	outline: none;
+	left: 2px;
+	margin-top: 13px;
+}
 .password-signup {
 	position: relative;
 }
@@ -186,6 +210,16 @@ body .signup .signupinput {
 	padding: 9px;
 }
 
+.resetpassword {
+	height: 30px;
+	width: 276px;
+	border-radius: 4px;
+	border: 1px solid #ccd6dd;
+	padding: 9px;
+	font-size: 13px;
+	line-height: 20px;
+}
+
 
 .signupinput {
 	height: 30px;
@@ -193,6 +227,8 @@ body .signup .signupinput {
 	border-radius: 4px;
 	border: 1px solid #ccd6dd;
 	padding: 9px;
+	font-size: 13px;
+	line-height: 20px;
 }
 
 .login_button input {
