--- a/lib/views/Recovery/forgotten_password.erb
+++ b/lib/views/Recovery/forgotten_password.erb
@@ -1,5 +1,7 @@
-Please put in your email and we will send you a link to resetting your password!
+<br><div class="resetpasswordform">Please put in your email and we will send you a link to resetting your password!
+<br><br>
 <form action="/forgotten_password" method="post">
-	<input type="text" name="email" placeholder="max@mustermann.de">
-	<input type="submit" value="reset password">
+	<input class="resetpassword" type="text" name="email" placeholder="max@mustermann.de"><br>
+	<button class="resetpasswordbutton" type="submit">Reset Password</button>
 </form>
+</div>
