--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -37,6 +37,9 @@ body .cheets-heading {
 
 }
 
+.user-interface {
+	text-align: center;
+}
 .feed {
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	border: 1px solid #e6e6e6;
@@ -163,6 +166,46 @@ body .signup .signupinput {
 	left: 109px;
 }
 
+.signout-btn {
+	color: #fff;
+	background-color: #55acee;
+	border: 1px solid #3b88c3;
+	font-size: 14px;
+	font-weight: bold;
+	border-spacing: 2px;
+	border-color: gray;
+	border-radius: 4px;
+	padding-bottom: 3px;
+	padding-top: 0px;
+	position: relative;
+	right: 1.8%;
+	height: 30px;
+	top: 9.2%;
+	width: 80px;
+	outline: none;
+	left: 109px;
+}
+
+.userinterface-buttons {
+	color: #fff;
+	background-color: #55acee;
+	border: 1px solid #3b88c3;
+	font-size: 14px;
+	font-weight: bold;
+	border-spacing: 2px;
+	border-color: gray;
+	border-radius: 4px;
+	padding-bottom: 3px;
+	padding-top: 0px;
+	position: relative;
+	right: 1.8%;
+	height: 30px;
+	top: 9.2%;
+	width: 80px;
+	outline: none;
+	left: 3px;
+	margin: 2px;
+}
 .resetpasswordform {
 	text-align: center;
 }
@@ -207,6 +250,17 @@ body .signup .signupinput {
 	border-radius: 4px;
 	border: 1px solid #ccd6dd;
 	padding: 9px;
+}
+
+.textarea {
+	border: 1px solid #ccd6dd;
+	height: 30px;
+	width: 276px;
+	border-radius: 4px;
+	font-size: 13px;
+	line-height: 20px;
+	padding: 4px;
+	padding-left: 6px;
 }
 
 .resetpassword {
