fold out post textarea in place with css, can´t post empty messages either

--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -7,11 +7,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="HandheldFriendly" content="true">
     	<link href="/stylesheet.css" rel="stylesheet" type="text/css">
+        <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script>
     </head>
     <body>
     <div id="header">
     <img src="/chitterlogo.png">
     </div>
+    <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script>
+
+    
     <%= yield %>
     </body>
 </html>
