--- a/lib/views/User/user_interface.erb
+++ b/lib/views/User/user_interface.erb
@@ -1,8 +1,10 @@
-<div class="user-interface">Welcome <%= session[:name] %> 
 
+
+<div class="user-interface"><!-- Welcome <%= session[:name] %>  -->
+<br>
 <div id="new-post">
 	<form action="/" method="post">
-		<textarea class="textarea" cols="30" rows="1" name="message" maxlength="140" minlength="25" placeholder="Post a new cheet..."></textarea>
+		<textarea class="textarea" cols="30" rows="1" name="message" maxlength="140" minlength="25" placeholder="Post a new cheet..." required></textarea>
 		<br><button class="userinterface-buttons" type="submit">Cheet</button>
 	</form>
 </div>
@@ -12,3 +14,9 @@
 </form>
 <%= erb :"partials/post_display" %>
 </div>
+<script> 
+    $(document).ready(function(){
+  $('textarea').on('click', function() { 
+    $(this).attr({rows: 90})});
+    });
+    </script>
