--- a/lib/views/Errors/signup_taken.erb
+++ b/lib/views/Errors/signup_taken.erb
@@ -1,1 +1,1 @@
-Your e-mail or Nickname has already been taken <a href="/">Back</a>
+<div class="errors">Your e-mail or Nickname has already been taken <a href="/">Back</a></div>
