--- a/lib/views/Recovery/reset_password.erb
+++ b/lib/views/Recovery/reset_password.erb
@@ -1,7 +1,7 @@
-	<h1>Please put in your new password!</h1>
+<div class="errors">	<h1>Please put in your new password!</h1>
 <form action="/reset_password" method="post">
 	Password: <input name="password" type="password">
 	Password Confirmation: <input name="password_confirmation" type="password">
 	<input type="hidden" name="token" value="<%= @token %>">
 	<input type="submit" value="Reset Password">
-</form>
+</form></div>
