--- a/lib/views/User/new_user.erb
+++ b/lib/views/User/new_user.erb
@@ -1,4 +1,4 @@
-<br><form class="signup" action="/signup" method="post">
+<form class="signup" action="/signup" method="post">
 	<input class="signupinput" name="email" type="text" required pattern="^([a-zA-Z0-9_\-\.]+)@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,3})$" placeholder="Email"><br>
 	<input class="signupinput" name="name" type="text" required minlength="1" placeholder="Name"><br>
 	<input class="signupinput" name="nickname" type="text" required minlength="1" placeholder="Nickname"><br>
