--- a/lib/views/Errors/token_crashed.erb
+++ b/lib/views/Errors/token_crashed.erb
@@ -1,1 +1,1 @@
-Something went wrong with your Token <a href="/">Back</a>
+<div class="errors">Something went wrong with your Token <a href="/">Back</a></div>
