--- a/lib/views/Errors/wrong_login.erb
+++ b/lib/views/Errors/wrong_login.erb
@@ -1,1 +1,1 @@
-Wrong credentials <a href="/">back</a><br><br><a href="/forgotten_password">Forgot your password?</a>
+<div class="errors">Wrong credentials <a href="/">back</a><br><br><a href="/forgotten_password">Forgot your password?</a></div>
