placeholder changes opacity now when on focus

--- a/lib/views/User/user_interface.erb
+++ b/lib/views/User/user_interface.erb
@@ -17,6 +17,6 @@
 <script> 
     $(document).ready(function(){
   $('.textarea').on('click', function() { 
-    $(this).attr('rows',90);
+    $(this).hidden();
     });
-    </script>
+</script>
