--- a/lib/public/stylesheet.css
+++ b/lib/public/stylesheet.css
@@ -122,6 +122,8 @@ body .signup .signupinput {
 	margin-left: 12px;
 	margin-top: 4px;
 }
+
+
 .signin-btn {
 	color: #fff;
 	background-color: #55acee;
@@ -254,6 +256,25 @@ body .signup .signupinput {
 	padding: 9px;
 }
 
+.login-email[type=text]:focus, .login-password[type=password]:focus, .signupinput[type=text]:focus, .resetpassword[type=password]:focus{
+}
+
+::-webkit-input-placeholder {
+	color: #66757f;
+}
+
+focus::-webkit-input-placeholder:focus {
+	opacity: 0.5;
+}
+
+input::-webkit-input-placeholder {
+    color: #66757f;
+}
+input:focus::-webkit-input-placeholder {
+    opacity: 0.5;
+}
+
+}
 .textarea {
 	border: 1px solid #ccd6dd;
 	height: 30px;
@@ -357,8 +378,14 @@ body .signup .signupinput {
 input[type=text]:focus,
 input[type=password]:focus,
 input[type=textarea]:focus {
-    box-shadow: 0 0 8px #55acee;
-    border-color: #55acee;
+    /*box-shadow: 0 0 8px #55acee;
+    border-color: #55acee;*/
+    border: 1px solid #56b4ef;
+	box-shadow: inset 0 1px 3px rgba(0,0,0,0.05),0 0 8px rgba(82,168,236,0.6);
+	outline: 0;
+	color: #292f33;
+	border-color: #56b4ef;
+}
 }
 
 input[type=text],
