--- a/lib/views/User/index.erb
+++ b/lib/views/User/index.erb
@@ -3,14 +3,14 @@
 		<form method="post" action="/login">
 			<div class="password-signup">
 				<p>
-					<input class="login-email" type="text" name='email' placeholder="Email">
+					<input class="login-email" type="text" name="email" placeholder="Email">
 				</p>
 				<p>	
 					<input class="login-password" type="password" value="password" name="password" placeholder="Password">
 					<button class="signin-btn button" type="submit">Sign in</button>
 				</p>
 				<div class="login-forgotpassword">
-					<span class="signuplogin"><a href="/signup/new">Click here to sign up!</a></span><span class="dot-form"> · </span><a href="/forgotten_password">Forgot your password?</a>
+					<span class="signuplogin	"><a href="/signup/new">Click here to sign up!</a></span><span class="dot-form"> · </span><a href="/forgotten_password">Forgot your password?</a>
 	 				
 	 				
 	 			</div>
