--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -11,7 +11,7 @@
     </head>
     <body>
     <div id="header">
-    <img src="/chitterlogo.png">
+    <a href="/user_interface"><img src="/chitterlogo.png"></a>
     </div>
     <br>
     <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script>
