--- a/lib/views/Errors/signup_taken.erb
+++ b/lib/views/Errors/signup_taken.erb
@@ -1,1 +1,1 @@
-<div class="errors">Your e-mail or Nickname has already been taken <a href="/">Back</a></div>
+<div class="errors">Your e-mail and nickname have to be unique, are you sure you typed the same password twice?<a href="/">Back</a></div>
