--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -205,8 +205,35 @@ body .signup .signupinput {
 	top: 9.2%;
 	width: 80px;
 	outline: none;
+	left: 76px;
+	margin: 2px;
+	margin-left: -74px;
+	margin-right: -76px;
+}
+
+.userinterface-buttons-submit {
+	color: #fff;
+	background-color: #55acee;
+	border: 1px solid #3b88c3;
+	font-size: 14px;
+	font-weight: bold;
+	border-spacing: 2px;
+	border-color: gray;
+	border-radius: 4px;
+	padding-bottom: 3px;
+	padding-top: 0px;
+	position: relative;
+	right: 1.8%;
+	height: 30px;
+	top: 9.2%;
+	width: 80px;
+	outline: none;
 	left: 3px;
 	margin: 2px;
+}
+
+.characters-left {
+
 }
 
 .resetpasswordform {
@@ -404,6 +431,11 @@ input[type=textarea]:focus {
 	box-shadow: 0 0 8px #55acee;
     border-color: #55acee;
     height: 90px;
+}
+
+#post-form {
+	border: 70px;
+	border-color: blue;
 }
 
 body .errors {
