--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -190,25 +190,25 @@ body .signup .signupinput {
 
 .userinterface-buttons {
 	color: #fff;
-	background-color: #55acee;
-	border: 1px solid #3b88c3;
-	font-size: 14px;
-	font-weight: bold;
-	border-spacing: 2px;
-	border-color: gray;
-	border-radius: 4px;
-	padding-bottom: 3px;
-	padding-top: 0px;
-	position: relative;
-	right: 1.8%;
-	height: 30px;
-	top: 9.2%;
-	width: 80px;
-	outline: none;
-	left: 76px;
-	margin: 2px;
-	margin-left: -74px;
-	margin-right: -76px;
+background-color: #55acee;
+border: 1px solid #3b88c3;
+font-size: 14px;
+font-weight: bold;
+border-spacing: 2px;
+border-color: gray;
+border-radius: 4px;
+padding-bottom: 3px;
+padding-top: 0px;
+position: relative;
+right: 1.8%;
+height: 30px;
+top: 0.2%;
+width: 80px;
+outline: none;
+left: 76px;
+margin: 2px;
+margin-left: -74px;
+margin-right: -76px;
 }
 
 .userinterface-buttons-submit {
@@ -433,11 +433,18 @@ input[type=textarea]:focus {
     height: 90px;
 }
 
-#post-form {
-	border: 70px;
-	border-color: blue;
+.post-form {
+	background: white;
+	border: 1px solid #e6e6e6;
+	border-bottom: 1px solid #e6e6e6;
+	border-left: 1px solid #e6e6e6;
+	border-right: 1px solid #e6e6e6;
+	border-radius: 4px;
+	margin: auto;
+	width: 302px;
+	height: 38px;
+	padding-top: 3px;
 }
-
 body .errors {
 	text-align: center;
 }
