reset password token window know with decent css

--- a/views/recovery/reset_password.erb
+++ b/views/recovery/reset_password.erb
@@ -1,7 +1,7 @@
-<div class="errors">	<h1>Please put in your new password!</h1>
-<form action="/reset_password" method="post">
-	Password: <input name="password" type="password">
-	Password Confirmation: <input name="password_confirmation" type="password">
+<div class="errors"><div class="arschloch">Please put in your new password!</div><br>
+<form class="token-form" action="/reset_password" method="post">
+	<input class="token-input" name="password" type="password" placeholder="Password">
+	<input class="token-input" name="password_confirmation" type="password" placeholder="Password Confirmation">
 	<input type="hidden" name="token" value="<%= @token %>">
-	<input type="submit" value="Reset Password">
+	<input class="token-button" type="submit" value="Reset Password">
 </form></div>
