--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -261,6 +261,28 @@ margin-right: -76px;
 	margin-top: 13px;
 	text-decoration: none;
 }
+
+.resetpasswordbuttontoken {
+	color: #fff;
+background-color: #55acee;
+border: 1px solid #3b88c3;
+font-size: 14px;
+font-weight: bold;
+border-spacing: 2px;
+border-color: gray;
+border-radius: 4px;
+padding-bottom: 6px;
+padding-top: 2px;
+position: relative;
+right: 1.8%;
+height: 25px;
+top: -0.8%;
+width: 127px;
+outline: none;
+left: 2px;
+margin-top: 13px;
+text-decoration: none;
+}
 .password-signup {
 	position: relative;
 }
@@ -283,6 +305,25 @@ margin-right: -76px;
 	border: 1px solid #ccd6dd;
 	padding: 9px;
 }
+
+.reset-password {
+	height: 33px;
+width: 276px;
+border-radius: 4px;
+border: 1px solid #ccd6dd;
+padding: 8px;
+font-size: 13px;
+}
+
+.reset-password-confirmation {
+	height: 33px;
+width: 276px;
+border-radius: 4px;
+border: 1px solid #ccd6dd;
+padding: 9px;
+font-size: 13px;
+}
+
 
 /*.login-email[type=text]:focus, .login-password[type=password]:focus, .signupinput[type=text]:focus, .resetpassword[type=password]:focus{
 }*/
@@ -445,10 +486,71 @@ input[type=textarea]:focus {
 	width: 302px;
 	padding-top: 3px;
 }
+
+.reset-password-form {
+	background: white;
+	border: 1px solid #e6e6e6;
+	border-bottom: 1px solid #e6e6e6;
+	border-left: 1px solid #e6e6e6;
+	border-right: 1px solid #e6e6e6;
+	border-radius: 4px;
+	width: 302px;
+	padding-top: 3px;
+}
+}
 body .errors {
 	text-align: center;
 }
 
+.token-form {
+	background: white;
+border: 1px solid #e6e6e6;
+border-bottom: 1px solid #e6e6e6;
+border-left: 1px solid #e6e6e6;
+border-right: 1px solid #e6e6e6;
+border-radius: 4px;
+margin: auto;
+width: 302px;
+height: 138px;
+padding-top: 9px;
+padding-bottom: 5px;
+}
+
+.arschloch {
+	text-align: center;
+}
+
+.token-input {
+	height: 30px;
+width: 276px;
+border-radius: 4px;
+border: 1px solid #ccd6dd;
+padding: 5px;
+font-size: 13px;
+line-height: 20px;
+margin: 4px;
+margin-left: 13px;
+}
+
+.token-button {
+	color: #fff;
+background-color: #55acee;
+border: 1px solid #3b88c3;
+font-size: 14px;
+font-weight: bold;
+border-spacing: 2px;
+border-color: gray;
+border-radius: 4px;
+padding-bottom: 3px;
+padding-top: 0px;
+position: relative;
+right: 1.8%;
+height: 30px;
+top: 9.2%;
+width: 126px;
+outline: none;
+left: 88px;
+}
 
 button:hover, body .errors a:hover {
 	background-color: #55acee;
