Cleaned up the program nicely, no Datamapper methods in the get post methods anymore

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
     </head>
     <body>
     <div id="header">
-    <a href="/user_interface"><img src="/chitterlogo.png"></a>
+    <a href="/user_interface"><img src="/img/chitterlogo.png"></a>
     </div>
     <br>
     <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script>
