cleaned up identation and formatting in general

--- a/views/errors/signup_taken.erb
+++ b/views/errors/signup_taken.erb
@@ -1,1 +1,3 @@
-<div class="errors">Your e-mail and nickname have to be unique, are you sure you typed the same password twice?<a href="/">Back</a></div>
+<div class="errors">
+	Your e-mail and nickname have to be unique, are you sure you typed the same password twice?<a href="/">Back</a>
+</div>
