--- a/views/recovery/forgotten_password.erb
+++ b/views/recovery/forgotten_password.erb
@@ -1,7 +1,9 @@
-<br><div class="resetpasswordform">Please put in your email and we will send you a link to resetting your password!
-<br><br>
-<form action="/forgotten_password" method="post">
-	<input class="resetpassword" type="text" name="email" placeholder="Email"><br>
-	<button class="resetpasswordbutton" type="submit">Reset Password</button>
-</form>
+<br>
+<div class="resetpasswordform">Please put in your email and we will send you a link to resetting your password!
+	<br>
+	<br>
+	<form action="/forgotten_password" method="post">
+		<input class="resetpassword" type="text" name="email" placeholder="Email"><br>
+		<button class="resetpasswordbutton" type="submit">Reset Password</button>
+	</form>
 </div>
