--- a/views/errors/token_crashed.erb
+++ b/views/errors/token_crashed.erb
@@ -1,1 +1,3 @@
-<div class="errors">Something went wrong with your Token <a href="/">Back</a></div>
+<div class="errors">
+	Something went wrong with your Token <a href="/">Back</a>
+</div>
