--- a/views/errors/token_has_been_used.erb
+++ b/views/errors/token_has_been_used.erb
@@ -1,1 +1,3 @@
-<div class="errors">Token has already been used...<a href="/">Back</a></div>
+<div class="errors">
+	Token has already been used...<a href="/">Back</a>
+</div>
