--- a/views/errors/user_not_exist.erb
+++ b/views/errors/user_not_exist.erb
@@ -1,1 +1,3 @@
-<div class="errors">User doesn´t exist <a href="/">Back</a></div>
+<div class="errors">
+	User doesn´t exist <a href="/">Back</a>
+</div>
