--- a/views/errors/wrong_login.erb
+++ b/views/errors/wrong_login.erb
@@ -1,1 +1,3 @@
-<div class="errors">Wrong credentials <a href="/">back</a><br><br><a href="/forgotten_password">Forgot your password?</a></div>
+<div class="errors">
+	Wrong credentials <a href="/">back</a><br><br><a href="/forgotten_password">Forgot your password?</a>
+</div>
