--- a/views/recovery/password_changed.erb
+++ b/views/recovery/password_changed.erb
@@ -1,1 +1,3 @@
-<div class="errors">All done, you can login with your new password now<a href="/">Back</a></div>
+<div class="errors">
+	All done, you can login with your new password now<a href="/">Back</a>
+</div>
