--- a/views/recovery/please_check_email.erb
+++ b/views/recovery/please_check_email.erb
@@ -1,1 +1,3 @@
-<div class="errors">Please check your email!<a href="/">Back</a></div>
+<div class="errors">
+	Please check your email!<a href="/">Back</a>
+</div>
