--- a/views/recovery/reset_password.erb
+++ b/views/recovery/reset_password.erb
@@ -1,7 +1,12 @@
-<div class="errors"><div class="arschloch">Please put in your new password!</div><br>
-<form class="token-form" action="/reset_password" method="post">
-	<input class="token-input" name="password" type="password" placeholder="Password">
-	<input class="token-input" name="password_confirmation" type="password" placeholder="Password Confirmation">
-	<input type="hidden" name="token" value="<%= @token %>">
-	<input class="token-button" type="submit" value="Reset Password">
-</form></div>
+<div class="errors">
+	<div class="arschloch">
+		Please put in your new password!
+	</div>
+	<br>
+	<form class="token-form" action="/reset_password" method="post">
+		<input class="token-input" name="password" type="password" placeholder="Password">
+		<input class="token-input" name="password_confirmation" type="password" placeholder="Password Confirmation">
+		<input type="hidden" name="token" value="<%= @token %>">
+		<input class="token-button" type="submit" value="Reset Password">
+	</form>
+</div>
